fix(vue-sidebar): remove gap to the navbar (#377)

--- a/src/app/shared/designSystem/global.scss
+++ b/src/app/shared/designSystem/global.scss
@@ -16,12 +16,12 @@ i {
   svg {
     height: inherit;
     width: inherit;
-    fill: currentColor !important;
-    stroke: currentColor !important;
+    fill: currentColor;
+    stroke: currentColor;
   }
 
   g {
-    stroke: currentColor !important;
+    stroke: currentColor;
   }
 }
 
