--- a/src/app/shared/designSystem/variables/_sidebar.scss
+++ b/src/app/shared/designSystem/variables/_sidebar.scss
@@ -1,15 +1,17 @@
-$sidebar-index: 2002;
-$sidebar-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+$sidebar-index: 1999;
+$sidebar-shadow: $brand-shadow-md;
 $sidebar-bg: $brand-bg-color;
 $sidebar-color: $brand-text-color;
 $sidebar-max-width: 80%;
-$sidebar-padding: $space-unit * 2;
-$sidebar-margin: $space-unit * 8 0 0 0;
+$sidebar-padding: $space-xxl $space-md $space-md $space-md;
+$sidebar-margin: 0;
 $sidebar-transition: transform $brand-transition-duration ease-in-out;
 $sidebar-width: 300px;
-$sidebar-height: calc(100% - #{$space-unit * 8});
-$sidebar-hamburger-bg: $brand-primary;
+$sidebar-height: 100%;
+$sidebar-hamburger-bg: transparent;
 $sidebar-hamburger-color: $brand-text-color-inverse;
+$sidebar-hamburger-open-bg: transparent;
+$sidebar-hamburger-open-color: $brand-text-color;
 
 $sidebar-group-margin: 0 0 $space-unit * 6 0;
 $sidebar-group-font-weight: $font-weight-medium;
